--- a/poem.rmd
+++ b/poem.rmd
@@ -14,10 +14,28 @@ Our project will be done using several commits to the master branch.
 you, if you change any of this the git program will notice it and compromise your git merging strategy !-->
 
 ## First Verse 
-<!--Put the first five lines of a poem by Lewis Carrol in this section!-->
+’Twas brillig, and the slithy toves  
+      Did gyre and gimble in the wabe:  
+All mimsy were the borogoves,  
+      And the mome raths outgrabe.  
 
+“Beware the Jabberwock, my son!  
+      The jaws that bite, the claws that catch!  
+Beware the Jubjub bird, and shun  
+      The frumious Bandersnatch!”  
+      
 ## Second Verse
-<!--Put the first five lines of a poem by Robert Frost here!-->
+Two roads diverged in a yellow wood,  
+And sorry I could not travel both  
+And be one traveler, long I stood
+And looked down one as far as I could  
+To where it bent in the undergrowth;  
+
+Then took the other, as just as fair,  
+And having perhaps the better claim,  
+Because it was grassy and wanted wear;  
+Though as for that the passing there  
+Had worn them really about the same,  
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
