--- a/poem.rmd
+++ b/poem.rmd
@@ -27,7 +27,7 @@ Beware the Jubjub bird, and shun
 ## Second Verse
 Two roads diverged in a yellow wood,  
 And sorry I could not travel both  
-And be one traveler, long I stood
+And be one traveler, long I stood  
 And looked down one as far as I could  
 To where it bent in the undergrowth;  
 
@@ -38,7 +38,19 @@ Though as for that the passing there
 Had worn them really about the same,  
 
 ## Third Verse
-<!--Put the first two verses of The Walrus and the Carpenter here!-->
+"The sun was shining on the sea,  
+      Shining with all his might:  
+He did his very best to make  
+      The billows smooth and bright —  
+And this was odd, because it was  
+      The middle of the night.  
+
+The moon was shining sulkily,  
+      Because she thought the sun  
+Had got no business to be there  
+      After the day was done —  
+"It's very rude of him," she said,  
+      "To come and spoil the fun."  
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
